[tomcat] Upgrade to tomcat 9.0.12